# Manabu

./: .gitignore  Cargo.toml  README.MD  justfile  notes.txt  todo.md
src/: app.rs  main.rs
src/app/: app_ext.rs  constants.rs  core.rs  hiragana.rs  kana.rs  katakana.rs  loading.rs  menu.rs  no_data.rs  settings.rs  utils.rs
